# docker-volumes-analyzer

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml  tests.yml
doc/: prometheus.md
scripts/: entrypoint.sh
src/docker_volume_analyzer/: docker_client.py  errors.py  filesystem.py  main.py  tui.py  tui.tcss  volume_manager.py  web.py  wsgi.py
src/docker_volume_analyzer/widgets/: virtual_tree.py
tests/: test_docker_client.py  test_errors.py  test_filesystem.py  test_main.py  test_tui.py  test_volume_manager.py  test_web.py
